Added new database with Identity

--- a/ProjektuppgiftAspDotNet/appsettings.json
+++ b/ProjektuppgiftAspDotNet/appsettings.json
@@ -1,5 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Forum;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Forum;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "LogInConnection": "Server=(localdb)\\MSSQLLocalDB;Database=UsersLogin;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
